Fork JsonVue to JsonVuePlus. Add support for copying values without enclosing quotes. Fixed bug: ReferenceError: Cannot access 'optionsChanged'.

--- a/src/css-editor.html
+++ b/src/css-editor.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Style editor - JSONVue</title>
+	<title>Style editor - JSONVuePlus</title>
 	<link rel="stylesheet" type="text/css" href="codemirror/codemirror.css">
 	<link rel="stylesheet" type="text/css" href="css/css-editor.css">
 </head>
