--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>JSONVue options</title>
+	<title>JSONVuePlus options</title>
 	<link rel="stylesheet" type="text/css" href="css/options.css">
 </head>
 
